pilot/pkg/security/authz/builder/testdata/action-allow-HTTP-for-TCP-filter-in.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: httpbin-deny
  namespace: foo
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["id-1"]
    to:
    - operation:
        methods: ["GET"]
  - from:
    - source:
        namespaces: ["ns-1", "regex:ns-[0-9]+-regexp"]
    to:
    - operation:
        ports: ["80"]
