pilot/pkg/security/authz/builder/testdata/action-allow-HTTP-for-TCP-filter-out.yaml
name: envoy.filters.network.rbac
typedConfig:
  '@type': type.googleapis.com/envoy.config.filter.network.rbac.v2.RBAC
  rules:
    policies:
      ns[foo]-policy[httpbin-deny]-rule[1]:
        permissions:
        - andRules:
            rules:
            - orRules:
                rules:
                - destinationPort: 80
        principals:
        - andIds:
            ids:
            - orIds:
                ids:
                - authenticated:
                    principalName:
                      safeRegex:
                        googleRe2: {}
                        regex: .*/ns/ns-1/.*
  statPrefix: tcp.
